--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4348113002'>Job Application for Site Reliability Engineer at Punchh</a></h5> 
+<h5><a href='https://boards.greenhouse.io/punchh/jobs/4348113002'>Job Application for Site Reliability Engineer at Punchh</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/creditkarma/dae9e9d8-fcae-4d6a-919d-8a36d94ee34f'>Credit Karma - Staff Site Reliability, Observability /  Staff Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/creditkarma/dae9e9d8-fcae-4d6a-919d-8a36d94ee34f'>Credit Karma - Staff Site Reliability, Observability /  Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -122,7 +122,7 @@ NodeJS.</p>
 <p><span class="badge badge-light">Minneapolis</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365104002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365104002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -155,7 +155,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">Lisbon Berlin Paris Milan</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999691958545-site-reliability-engineer-london-uk-fixed-term-employment-'>Infoplus Technologies Site Reliability Engineer - London,UK (Fixed Term Employment) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999691958545-site-reliability-engineer-london-uk-fixed-term-employment-'>Infoplus Technologies Site Reliability Engineer - London,UK (Fixed Term Employment) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London London London</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -245,7 +245,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999691913366-site-reliability-engineer-architect'>Snow Software Site Reliability Engineer Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SnowSoftware/743999691913366-site-reliability-engineer-architect'>Snow Software Site Reliability Engineer Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -398,7 +398,7 @@ Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-13</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cbinsights/jobs/1756014'>Job Application for Site Reliability Engineer at CB Insights</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cbinsights/jobs/1756014'>Job Application for Site Reliability Engineer at CB Insights</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
@@ -412,7 +412,7 @@ Review all of the job details and apply today!</p>
 operations role that involves work across multiple IT and broadcast technologies 
 and will?...</p>
 <hr/>
-<h5><a href='https://kapten.workable.com/j/2D70D82E9C'>Kapten - Jobs: SRE (Site Reliability Engineer) / DevOps (H/F) - CDI Paris - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kapten.workable.com/j/2D70D82E9C'>Kapten - Jobs: SRE (Site Reliability Engineer) / DevOps (H/F) - CDI Paris - Apply online</a></h5> 
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
@@ -453,7 +453,7 @@ responsible for building and maintaining an enterprise level, cloud computing?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/servicenow/job/oMbuafwl'>ServiceNow Careers - Site Reliability Engineer Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/servicenow/job/oMbuafwl'>ServiceNow Careers - Site Reliability Engineer Intern</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
